--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="http://thenicebackoffice.com/test/angular-test/runtime.js" defer></script>
-<script src="http://thenicebackoffice.com/test/angular-test/polyfills.js" defer></script>
-<script src="http://thenicebackoffice.com/test/angular-test/styles.js" defer></script>
-<script src="http://thenicebackoffice.com/test/angular-test/vendor.js" defer></script>
-<script src="http://thenicebackoffice.com/test/angular-test/main.js" defer></script></body>
+<script src="https://tepakot.github.io/todo/runtime.js" defer></script>
+<script src="https://tepakot.github.io/todo/polyfills.js" defer></script>
+<script src="https://tepakot.github.io/todo/styles.js" defer></script>
+<script src="https://tepakot.github.io/todo/vendor.js" defer></script>
+<script src="https://tepakot.github.io/todo/main.js" defer></script></body>
 </html>
